# Fnloc

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  rust.yml
guides/: GITHUB_ACTIONS.md  README.md  complexity-analysis.md
scripts/: generate-test-results.sh
src/: cli.rs  client.rs  complexity_analyzer.rs  errors.rs  file_scanner.rs  function_analyzer.rs  function_extractor.rs  lib.rs  main.rs  nesting_depth.rs  output_formatter.rs
src/analyzer/: cyclomatic_complexity.rs  function_analyzer.rs  function_extractor.rs  mod.rs
tests/: README.md  cli_test.rs  integration_test.rs
tests/test_sample/: expected_results.txt  module.rs  sample.rs
